<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DBapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="guardar">Guardar contacto</string>
    <string name="ver">Ver listado</string>
    <string name="random">Seleccionar uno al azar</string>
    <string name="eleccion">La elegida vá aquí</string>
    <string name="elegir">Pulsa para elegir</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>

</resources>
